kubernetes/archive/deploy/proxies/internal/ambilight/endpoint.yaml
kind: Endpoints
apiVersion: v1
metadata:
  name: ambilight
subsets:
  - addresses:
      - ip: 192.168.100.16
    ports:
      - port: 8090
        name: http
