kubernetes/archive/deploy/proxies/internal/ambilight/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik-internal
  name: ambilight
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`ambilight.vandeneede.org`)
    services:
    - name: ambilight
      port: 8090
